--- a/styles.css
+++ b/styles.css
@@ -168,9 +168,14 @@ span{
 }
 
 .about-img img{
-    width: 30vw; 
-    border-radius: 5%;
-    box-shadow: 0 0 1rem var(--main-color); 
+    
+    max-width: 100%; 
+    height: 50vh; 
+    display: flex; 
+    margin: 0 auto; 
+    border-radius: 5%; 
+    box-shadow: 0px 4px 8px var(--main-color);
+     
 }
 
 .heading {
